Created entities, dto directories